--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1136.0",
     "body-parser": "^1.20.0",
     "csv-parse": "^5.0.4",
     "csv-parser": "^3.0.0",
@@ -27,6 +28,7 @@
     "pg": "^8.7.3",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.8",
+    "uuid": "^8.3.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
