--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "aws-sdk": "^2.1136.0",
     "body-parser": "^1.20.0",
+    "csv-generate": "^4.0.4",
     "csv-parse": "^5.0.4",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
+    "dummy-data-generator": "^1.7.3",
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
     "joi": "^17.6.0",
